# mcp-server-pii-guardian

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_data.py  run_benchmark.py
docs/: entity-types.md  quickstart.md  redaction-strategies.md
examples/: basic_guardian.py  custom_entities.py  mcp_middleware.py
src/pii_guardian/: __init__.py  audit.py  canary_integration.py  config.py  detector.py  guardian.py  local_detector.py  pii_report.py  redactor.py  streaming.py  types.py
src/pii_guardian/profiles/: __init__.py  ccpa.py  gdpr.py  hipaa.py  pci.py
tests/: conftest.py  test_local_detector.py
