[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pii-guardian"
version = "0.1.0"
description = "PII detection and redaction middleware for MCP servers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "MuVeraAI Corporation", email = "opensource@muveraai.com" },
]
keywords = [
    "mcp",
    "pii",
    "privacy",
    "presidio",
    "redaction",
    "ai-safety",
    "llm",
    "middleware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
]
# spaCy model required by Presidio's NLP engine — install separately:
#   python -m spacy download en_core_web_lg
spacy = [
    "spacy>=3.7",
]

[project.urls]
Homepage = "https://github.com/muveraai/mcp-server-pii-guardian"
Repository = "https://github.com/muveraai/mcp-server-pii-guardian"
Issues = "https://github.com/muveraai/mcp-server-pii-guardian/issues"
Changelog = "https://github.com/muveraai/mcp-server-pii-guardian/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch source layout -------------------------------------------------------
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/pii_guardian"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "examples/",
    "docs/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting) -----------------------------------------------
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PLC",  # pylint conventions
    "PLR",  # pylint refactoring
]
ignore = [
    "PLR2004",  # magic value comparisons — acceptable in tests and examples
    "SIM108",   # ternary vs if/else — readability preference
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201", "BLE001"]  # Allow print() and broad except in examples

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy (static type checking) -----------------------------------------------
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_reexport = false
files = ["src/pii_guardian"]

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "spacy.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest --------------------------------------------------------------------
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "integration: requires presidio-analyzer and spaCy model installed",
    "slow: expected to take >1s (e.g. model loading)",
]

[tool.coverage.run]
source = ["src/pii_guardian"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
